# sandbox

./: .gitignore  linuxnotes.md  reference.md
c/: floatToHex.c  fprintf_stderr.c  listdir.c  listdir2.c  overprint.c  starargs.c
cmake/cmake_presentation/: CMakeLists.txt  buildsystems.md  presentation.html  presentation.md  profiling.md
computer/: wifiproblems.md
cpp/ceres/helloworld/: CMakeLists.txt  ceres.sample.txt
cpp/ceres/helloworld/src/: CMakeLists.txt  main.cpp
cpp/eigen/: first.cpp  firstProgram.cpp
cpp/eigen/variable_type_input/: CMakeLists.txt  eigenstuff.cpp  eigenstuff.h  main.cpp
cpp/numerical/: nan_zero.cpp
cpp/std_chrono/: casting_test.cpp  std_chrono_test.cpp
cpp/std_function/: std_function_intro.cpp
cpp/templates/: template_test.cpp
cpp/variadic_templates/: vtemp_adder.cpp  vtemp_printf.cpp  vtemp_virtual.cpp
gazebo/magicc-tutorial/: pioneer_base.xacro  spawn_mav.launch
gdb/stm32f4/: gdb.md
inkscape/latex/: readme.md
julia/: pgfplotsx_demo.jl  progressbar_nb.ipynb
julia/TrajOpt/: DiscreteSingleIntegrator.ipynb
julia/animation/: anim.jl
julia/module_include_typing/: ModuleA.jl  ModuleB.jl  ModuleC.jl  run.jl
latex/latex2html/: README.md  main.tex
latex/standalone/: standalone_test.tex
matlab/: reference.md
matlab/plus_submodule/: testfoo.m
opencv/: installing.md
python/: notes.md
python/airsim/: hello_drone.py
python/argparse/: argparseTest.py
python/doctest/: test.py  test2.py
python/ftdi/: i2c_MCP23008.py
python/functionInFunction/: test.py
python/importerror/: test.py
python/logging/: test.py
(+90 files in other folders)
